fix: spacing

--- a/src/App.scss
+++ b/src/App.scss
@@ -30,7 +30,7 @@ body {
   padding: 0;
   font-size: 16px;
   font-family: $body-font;
-  padding-bottom: 4rem;
+  padding-bottom: 1rem;
   background-color: #fff;
   overflow-x: hidden;
 }
